@@ -363,7 +363,7 @@ msdos_dir_read(rtems_libio_t *iop, void *buffer, size_t count)
  *     RC_OK on success, or -1 if error occured (errno
  *     set apropriately).
  */
-int
+off_t
 msdos_dir_lseek(rtems_libio_t *iop, off_t offset, int whence)
 {
     switch (whence)
